--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
 }
 
 .App-header {
-  background-color: red;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: black;
+  color: white;
 }
 
 .App-link {
